--- a/Italian/main/MiuiGallery.apk/res/values-it/plurals.xml
+++ b/Italian/main/MiuiGallery.apk/res/values-it/plurals.xml
@@ -34,7 +34,27 @@
         <item quantity="zero">%1$d</item>
         <item quantity="one">%1$d</item>
     </plurals>
-    <plurals name="number_of_cloudimages">
+    <plurals name="how_many_pics">
+        <item quantity="other">%d foto</item>
+        <item quantity="one">%d foto</item>
+    </plurals>
+    <plurals name="how_many_videos">
+        <item quantity="other">%d video</item>
+        <item quantity="one">%d video</item>
+    </plurals>
+    <plurals name="how_many_sub_folders">
+        <item quantity="other">%d cartelle</item>
+        <item quantity="one">%d cartella</item>
+    </plurals>
+    <plurals name="message_no_delete_access_with_count">
+        <item quantity="other">Non hai i permessi necessari per eliminare questi %d file.</item>
+        <item quantity="one">Non hai i permessi necessari per eliminare questo file</item>
+    </plurals>
+    <plurals name="pick_with_limited_upper_bound_title">
+        <item quantity="other">Puoi selezionare %d elementi</item>
+        <item quantity="one">Puoi selezionare %d elemento</item>
+    </plurals>
+    <plurals name="number_of_images">
         <item quantity="other">%1$d immagini</item>
         <item quantity="zero">%1$d immagini</item>
         <item quantity="one">%1$d immagine</item>
