--- a/Italian/main/TeleService.apk/res/values-it/arrays.xml
+++ b/Italian/main/TeleService.apk/res/values-it/arrays.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="cdma_system_select_choices">
-        <item>Solo domestiche</item>
+        <item>Solo domestico</item>
         <item>Automatico</item>
     </string-array>
-</resources>
+    <string-array name="list_language_entries">
+        <item>English</item>
+        <item>French</item>
+        <item>Spanish</item>
+        <item>Japanese</item>
+        <item>Korean</item>
+        <item>Chinese</item>
+        <item>Hebrew</item>
+    </string-array>
+   </resources>
