--- a/Italian/main/Browser.apk/res/values-it/arrays.xml
+++ b/Italian/main/Browser.apk/res/values-it/arrays.xml
@@ -8,14 +8,6 @@
         <item>UTF-8</item>
         <item>http://api.bing.com/osjson.aspx?query={searchTerms}&amp;language={language}</item>
     </string-array>
-    <string-array name="baidu">
-        <item>Google</item>
-        <item>google.com</item>
-        <item>http://www.google.com/favicon.ico</item>
-        <item>http://www.google.com/search?hl={language}&amp;ie={inputEncoding}&amp;source=android-browser&amp;q={searchTerms}</item>
-        <item>UTF-8</item>
-        <item>http://api.bing.com/osjson.aspx?query={searchTerms}&amp;language={language}</item>
-    </string-array>
     <string-array name="menu_theme_setting">
         <item>Bianco</item>
         <item>Giallo</item>
@@ -40,10 +32,13 @@
         <item>Grande</item>
         <item>Molto grande</item>
     </string-array>
-    <string-array name="pref_default_zoom_choices">
-        <item>Lontano</item>
-        <item>Medio</item>
-        <item>Chiudi</item>
+    <string-array name="pref_development_ua_choices">
+        <item>Android</item>
+        <item>Desktop</item>
+        <item>iPhone</item>
+        <item>iPad</item>
+        <item>Froyo-N1</item>
+        <item>Honeycomb-Xoom</item>
     </string-array>
     <string-array name="pref_default_text_encoding_choices">
         <item>Latin-1 (ISO-8859-1)</item>
@@ -55,7 +50,40 @@
         <item>Giapponese (EUC-JP)</item>
         <item>Coreano (EUC-KR)</item>
     </string-array>
-	 <string-array name="pref_images_preload_choices">
+    <string-array name="pref_link_prefetch_choices">
+        <item>Mai</item>
+        <item>Solo su WiFi</item>
+        <item>Sempre</item>
+    </string-array>
+    <string-array name="pref_data_preload_choices">
+        <item>Mai</item>
+        <item>Solo su Wi-Fi</item>
+        <item>Sempre</item>
+    </string-array>
+    <string-array name="pref_homepage_choices">
+        <item>Pagina iniziale predefinita</item>
+        <item>Personalizza</item>
+    </string-array>
+    <string-array name="pref_ua_choices">
+        <item>Android</item>
+        <item>Desktop</item>
+        <item>iPhone</item>
+        <item>iPad</item>
+    </string-array>
+    <string-array name="pref_volume_key_choices">
+        <item>Pagina precedente/successiva</item>
+        <item>Scheda precedente/successiva</item>
+    </string-array>
+    <string-array name="pref_fling_on_border_choices">
+        <item>Pagina precedente/successiva</item>
+        <item>Cambia finestra</item>
+    </string-array>
+    <string-array name="pref_default_zoom_choices">
+        <item>Lontano</item>
+        <item>Medio</item>
+        <item>Chiudi</item>
+    </string-array>
+    <string-array name="pref_images_preload_choices">
         <item>Mai</item>
         <item>Solo su Wi-Fi</item>
         <item>Sempre</item>
@@ -72,9 +100,10 @@
         <item>Solo su Wi-Fi</item>
         <item>Sempre</item>
     </string-array>
-    <string-array name="pref_link_prefetch_choices">
-        <item>Mai</item>
-        <item>Solo su Wi-Fi</item>
-        <item>Sempre</item>
+    <string-array name="pre_webapp_text_sizes">
+        <item>Molto grande</item>
+        <item>Grande</item>
+        <item>Normale</item>
+        <item>Piccolo</item>
     </string-array>
 </resources>
