--- a/Italian/main/Browser.apk/res/values-it/plurals.xml
+++ b/Italian/main/Browser.apk/res/values-it/plurals.xml
@@ -19,4 +19,16 @@
         <item quantity="other">%d elementi bloccati</item>
         <item quantity="one">%d elemento bloccato</item>
     </plurals>
+    <plurals name="suggest_access_item_singer_pop">
+        <item quantity="other">%d brani popolari</item>
+        <item quantity="one">%d brano popolare</item>
+    </plurals>
+    <plurals name="suggest_access_item_singer_albums">
+        <item quantity="other">%d album</item>
+        <item quantity="one">%d album</item>
+    </plurals>
+    <plurals name="suggest_access_item_album_songs">
+        <item quantity="other">%d brani</item>
+        <item quantity="one">%d brano</item>
+    </plurals>
 </resources>
