--- a/Italian/main/Music.apk/res/values-it/plurals.xml
+++ b/Italian/main/Music.apk/res/values-it/plurals.xml
@@ -19,6 +19,10 @@
         <item quantity="other">%d canzoni</item>
         <item quantity="one">%d canzone</item>
     </plurals>
+    <plurals name="Ntracks_similar_count">
+        <item quantity="other">%d brani simili</item>
+        <item quantity="one">%d brano simile</item>
+    </plurals>
     <plurals name="Ntracks_add_to_playlist">
         <item quantity="other">%d canzoni aggiunte alla playlist</item>
         <item quantity="one">1 canzone aggiunta alla playlist</item>
