--- a/Italian/main/Settings.apk/res/values-it/arrays.xml
+++ b/Italian/main/Settings.apk/res/values-it/arrays.xml
@@ -16,7 +16,7 @@
         <item>2 minuti</item>
         <item>5 minuti</item>
         <item>10 minuti</item>
-        <item>30 minuti</item>
+        <item>Mai</item>
     </string-array>
     <string-array name="dream_timeout_entries">
         <item>Mai</item>
@@ -91,12 +91,6 @@
         <item>Bloccato</item>
         <item>Al momento vengono evitate connessioni deboli</item>
     </string-array>
-    <string-array name="wifi_eap_method">
-        <item>PEAP</item>
-        <item>TLS</item>
-        <item>TTLS</item>
-        <item>PWD</item>
-    </string-array>
     <string-array name="wifi_p2p_wps_setup">
         <item>Pulsante di comando</item>
         <item>PIN del dispositivo peer</item>
@@ -141,12 +135,6 @@
         <item>Conteggio avvii</item>
         <item>Nome applicazione</item>
     </string-array>
-    <string-array name="wifi_eap_entries">
-        <item>PEAP</item>
-        <item>TLS</item>
-        <item>TTLS</item>
-        <item>PWD</item>
-    </string-array>
     <string-array name="wifi_peap_phase2_entries">
         <item>Nessuno</item>
         <item>MSCHAPV2</item>
@@ -178,11 +166,6 @@
         <item>CHAP</item>
         <item>PAP o CHAP</item>
     </string-array>
-    <string-array name="apn_protocol_entries">
-        <item>IPv4</item>
-        <item>IPv6</item>
-        <item>IPv4/IPv6</item>
-    </string-array>
     <string-array name="bearer_entries">
         <item>LTE</item>
         <item>eHRPD</item>
@@ -198,6 +181,13 @@
         <item>Memorizzazione su dispositivo interno</item>
         <item>Scheda SD rimovibile</item>
         <item>Impostazione di sistema</item>
+    </string-array>
+    <string-array name="app_ops_categories">
+        <item>Posizione</item>
+        <item>Personali</item>
+        <item>Messaggi</item>
+        <item>Contenuti multimediali</item>
+        <item>Dispositivo</item>
     </string-array>
     <string-array name="app_ops_summaries">
         <item>posizione approssimativa</item>
@@ -313,23 +303,12 @@
         <item>Contorno</item>
         <item>Ombreggiatura</item>
     </string-array>
-    <string-array name="captioning_opacity_selector_titles">
-        <item>25%</item>
-        <item>50%</item>
-        <item>75%</item>
-        <item>100%</item>
-    </string-array>
     <string-array name="captioning_preset_selector_titles">
         <item>Bianco su nero</item>
         <item>Nero su bianco</item>
         <item>Giallo su nero</item>
         <item>Giallo su blu</item>
         <item>Personalizzato</item>
-    </string-array>
-    <string-array name="select_runtime_titles">
-        <item>Dalvik</item>
-        <item>ART</item>
-        <item>ART (debug)</item>
     </string-array>
     <string-array name="select_runtime_summaries">
         <item>Usa Dalvik</item>
@@ -372,6 +351,16 @@
         <item>Scala animazione 2x</item>
         <item>Scala animazione 5x</item>
         <item>Scala animazione 10x</item>
+    </string-array>
+    <string-array name="overlay_display_devices_entries">
+        <item>Nessuno</item>
+        <item>720 x 480 mdpi</item>
+        <item>720 x 480 mdpi (sicuro)</item>
+        <item>1280 x 720 tvdpi</item>
+        <item>1280 x 720 tvdpi (sicuro)</item>
+        <item>1920 x 1080 xhdpi</item>
+        <item>1920 x 1080 xhdpi (sicuro)</item>
+        <item>1280x720 tvdpi a 1920x1080 xhdpi</item>
     </string-array>
     <string-array name="enable_opengl_traces_entries">
         <item>Nessuna</item>
@@ -420,6 +409,13 @@
         <item>Timeout</item>
         <item>Operazione non riuscita</item>
     </string-array>
+    <string-array name="user_content_ratings_entries">
+        <item>Ascended being</item>
+        <item>Human</item>
+        <item>Neanderthal</item>
+        <item>Chimp</item>
+        <item>Monkey</item>
+    </string-array>
     <string-array name="security_settings_premium_sms_values">
         <item>Chiedi</item>
         <item>Non consentire mai</item>
@@ -431,13 +427,6 @@
         <item>basso</item>
         <item>critico</item>
     </string-array>
-    <string-array name="app_ops_categories">
-        <item>Posizione</item>
-        <item>Personali</item>
-        <item>Messaggi</item>
-        <item>Contenuti multimediali</item>
-        <item>Dispositivo</item>
-    </string-array>
     <string-array name="haptic_feedback_level_entries">
         <item>Forte</item>
         <item>Medio</item>
@@ -447,6 +436,28 @@
         <item>Forte</item>
         <item>Medio</item>
         <item>Leggero</item>
+    </string-array>
+    <string-array name="multi_sim_entries">
+        <item>Subscription 1</item>
+        <item>Subscription 2</item>
+    </string-array>
+    <string-array name="multi_sim_summaries">
+        <item>Subscription 1</item>
+        <item>Subscription 2</item>
+    </string-array>
+    <string-array name="multi_sim_entries_voice">
+        <item>Subscription 1</item>
+        <item>Subscription 2</item>
+        <item>Prompt</item>
+    </string-array>
+    <string-array name="multi_sim_summaries_voice">
+        <item>Abbonmto 1</item>
+        <item>Abbonamento 2</item>
+        <item>Chiedi</item>
+    </string-array>
+    <string-array name="multi_sim_entries_voice_without_prompt">
+        <item>Abbonamento 1</item>
+        <item>Abbonamento 2</item>
     </string-array>
     <string-array name="battery_indicator_style_entries">
         <item>Grafico</item>
@@ -475,6 +486,7 @@
         <item>Rosa</item>
         <item>Viola</item>
         <item>Porpora</item>
+        <item>\#FFAA00AA</item>
     </string-array>
     <string-array name="led_color_entries">
         <item>Blu</item>
@@ -485,17 +497,19 @@
         <item>Bianco</item>
         <item>Viola</item>
     </string-array>
+    <string-array name="back_long_press_timeout">
+        <item>0,5 secondi</item>
+        <item>1 secondi</item>
+        <item>1,5 secondi</item>
+        <item>2 secondi</item>
+    </string-array> 
     <string-array name="screen_key_long_press_action">
-	    <item>Nessuna</item>
+	<item>Nessuna</item>
         <item>Lancia task manager</item>
         <item>Lancia assistente vocale</item>
         <item>Lancia Google now</item>
         <item>Chiudi applicazione corrente</item>
         <item>Mostra i menù</item>
-    </string-array>
-	    <string-array name="screen_key_press_action">
-        <item>Mostra task manager</item>
-        <item>Mostra menu</item>
     </string-array>
 	 <string-array name="screen_key_long_press_timeout">
         <item>0.5 secondi</item>
@@ -511,6 +525,14 @@
         <item>20 secondi</item>
         <item>Sempre</item>
     </string-array>
+    <string-array name="wfd_status">
+        <item>Inizio sessione...</item>
+        <item>Sessione iniziata</item>
+        <item>Chiusura sessione...</item>
+        <item>Sessione fallita</item>
+        <item>Timeout creazione sessione, nuovo tentativo...</item>
+        <item>Dispositivo collegato</item>
+    </string-array>
     <string-array name="power_mode_entries">
         <item>Alte prestazioni</item>
         <item>Bilanciato</item>
@@ -520,6 +542,32 @@
         <item>Windows Vista e versioni più recenti di Windows</item>
         <item>Mac OS</item>
         <item>Linux</item>
+    </string-array>
+    <string-array name="msd_pc_system_install_summary">
+        <item>"2. Wizard visualizzato durante l'installazione, 
+Seguire le istruzioni"</item>
+        <item></item>
+        <item></item>
+        <item></item>
+    </string-array>
+    <string-array name="msd_pc_system_install_finish_summary">
+        <item>@string/msd_pc_system_install_finish_summary_xp</item>
+        <item>@string/msd_pc_system_install_finish_summary_vista</item>
+        <item>"L'unità di archiiazione di massa USB verrà rilevata automaticamente quando collegato al computer."</item>
+        <item></item>
+    </string-array>
+    <array name="msd_pc_system_retry_xp">
+        <item>@string/msd_install_retry_connect</item>
+        <item>Reinstalla MiPhoneManager.</item>
+    </array>
+    <string-array name="msd_pc_system_retry_linux">
+        <item>Installa lo strumento \"sudo aptitude install mtpfs libfuse-dev libmad0-dev\"</item>
+        <item>Crea la cartella \"mkdir\" /media/mtp</item>
+        <item>Conferma permessi gruppo</item>
+        <item>Accedi di nuovo</item>
+        <item>Accesso al dispositivo montato: mtpfs /media/mtp tramite File Explorer; stessa cartella locale</item>
+        <item>"Disisntalla dispositivo fusermount -u /media/mtp
+ Nota: solo per Ubuntu 8.04"</item>
     </string-array>
     <string-array name="screen_color_title">
         <item>Caldo</item>
@@ -589,10 +637,33 @@
         <item>Normale</item>
         <item>Migliore qualità</item>
     </string-array>
+    <string-array name="screen_key_press_action">
+        <item>Zobraziť naposledy spustené apl.</item>
+        <item>Zobraziť Menu</item>
+    </string-array>
 	    <string-array name="whetstone_level_entries">
         <item>Disattivato</item>
         <item>Basso</item>
         <item>Medio</item>
         <item>Alto</item>
+    </string-array>
+	<string-array name="handy_mode_size_text_entries">
+        <item>4,5\"</item>
+        <item>4,0\"</item>
+        <item>3,5\"</item>
+    </string-array>
+    <string-array name="agps_network_entries">
+        <item>Rete domestica</item>
+        <item>Tutte le reti</item>
+    </string-array>
+    <string-array name="screen_optimize_title">
+        <item>Contrasto automatico</item>
+        <item>Contrasto aumentato</item>
+        <item>Normale</item>
+    </string-array>
+    <string-array name="screen_optimize_summary">
+        <item>Contrasto regolato in base alla luce ambientale</item>
+        <item>Contrasto aumentato</item>
+        <item>Non modificare il contrasto</item>
     </string-array>
 </resources>
