--- a/Italian/main/Calendar.apk/res/values-it/arrays.xml
+++ b/Italian/main/Calendar.apk/res/values-it/arrays.xml
@@ -55,7 +55,7 @@
         <item>10080</item>
     </string-array>
     <string-array name="preferences_week_start_day_labels">
-        <item>Preferenza default</item>
+        <item>Predefinita</item>
         <item>Sabato</item>
         <item>Domenica</item>
         <item>Lunedì</item>
