--- a/Italian/main/Email.apk/res/values-it/arrays.xml
+++ b/Italian/main/Email.apk/res/values-it/arrays.xml
@@ -1,24 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="general_preference_text_zoom_summary_array">
-        <item>Testo molto piccolo</item>
-        <item>Testo piccolo</item>
-        <item>Testo normale</item>
-        <item>Testo grande</item>
-        <item>Testo molto grande</item>
-    </string-array>
     <string-array name="compose_modes">
         <item>Rispondi</item>
         <item>Rispondi a tutti</item>
         <item>Inoltra</item>
     </string-array>
-    <string-array name="sync_status">
-        <item>Completato</item>
-        <item>Nessuna connessione.</item>
-        <item>Impossibile accedere.</item>
-        <item>Errore di sicurezza.</item>
-        <item>Impossibile sincronizzare</item>
-        <item>Errore interno</item>
+    <string-array name="menu_att_mgr_sort_string_array">
+        <item>Recenti</item>
+        <item>Formato</item>
+        <item>Nome</item>
+        <item>Mittente</item>
+        <item>Data</item>
     </string-array>
     <string-array name="moveto_folder_sections">
         <item>Sistema</item>
@@ -92,5 +84,13 @@
         <item>Questa email</item>
         <item>Avviso</item>
         <item>Avviso email</item>
+    </string-array>
+    <string-array name="sync_status">
+        <item>Sincronizzazione completata.</item>
+        <item>Errore nella connessione di rete.</item>
+        <item>Imposibile accedere.</item>
+        <item>Errore nella connessione sicura.</item>
+        <item>SIncronizzazione fallita.</item>
+        <item>Errore del server.</item>
     </string-array>
 </resources>
