--- a/Italian/main/MiuiVideo.apk/res/values-it/arrays.xml
+++ b/Italian/main/MiuiVideo.apk/res/values-it/arrays.xml
@@ -1,25 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="channel_tabs">
+        <item>Consigliati</item>
+        <item>Classifica</item>
+        <item>In evidenza</item>
+        <item>Ultimi</item>
+    </string-array>
+    <string-array name="variety_channel_tabs">
+        <item>Consigliati</item>
+        <item>In evidenza</item>
+    </string-array>
+    <string-array name="channel_tabs">
         <item>In evidenza</item>
         <item>Classifica</item>
         <item>Ultimi</item>
-    </string-array>
-    <string-array name="channel_featured_tabs">
-        <item>Selezionati</item>
-        <item>Classifica</item>
-        <item>Ultimi</item>
-    </string-array>
-    <string-array name="home_tabs">
-        <item>Online</item>
-        <item>Locale</item>
-    </string-array>
-    <string-array name="series_detail_tabs">
-        <item>Episodio</item>
-        <item>Riassunto</item>
-    </string-array>
-    <string-array name="addon_list_tabs">
-        <item>Tutti gli speciali</item>
-        <item>I miei speciali</item>
     </string-array>
 </resources>
