--- a/Italian/main/MiuiCamera.apk/res/values-it/plurals.xml
+++ b/Italian/main/MiuiCamera.apk/res/values-it/plurals.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--This Slovak translation is licenced under www.creativecommons.org/licenses/by-nc-nd/3.0/deed.en by MIUI CZ&SK www.miuios.cz-->
+<!--This Italian translation is licenced under www.creativecommons.org/licenses/by-nc-nd/3.0/deed.en by MIUI Italia www.miui.it-->
 <resources>
     <plurals name="delete_selection">
         <item quantity="other">Eliminare i file selezionati?</item>
