--- a/Italian/main/Weather.apk/res/values-it/plurals.xml
+++ b/Italian/main/Weather.apk/res/values-it/plurals.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="view_realtime_clear">
+        <item quantity="other">Sereno</item>
+        <item quantity="one">Sereno</item>
+    </plurals>
     <plurals name="activity_main_update_time_in_one_hour">
         <item quantity="other">%d minuti fa</item>
         <item quantity="one">%d minuto fa</item>
