--- a/Italian/main/MiuiVideo.apk/res/values-it/arrays.xml
+++ b/Italian/main/MiuiVideo.apk/res/values-it/arrays.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="channel_tabs">
+    <string-array name="movie_channel_tabs">
         <item>Consigliati</item>
         <item>Classifica</item>
         <item>In evidenza</item>
